# FabricSim

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: module_01_networking.md
examples/: test_adaptive_routing.cpp  test_routing.cpp  test_simulator.cpp  test_telemetry_stream.cpp  test_topology.cpp  test_traffic.cpp  udp_receiver.cpp  udp_sender.cpp  visualize_adaptive.cpp
include/fabricsim/: flow.hpp  packet.hpp  raii_socket.hpp  routing_engine.hpp  simulator.hpp  topology.hpp  traffic_generator.hpp
scripts/: visualize_heatmap.py
src/: routing_engine.cpp  simulator.cpp  topology.cpp  traffic_generator.cpp
